# kimi-cli-tools

./: .env.example  .gitignore  AGENTS.md  COMMANDS.md  COMMANDS_READY.md  COMMIT_MESSAGE_AUTOMATION.md  IMPLEMENTATION_SUMMARY.md  KIMI_SLASH_COMMANDS_AUDIT.md  MCP_AUTOMATION_README.md  MCP_README.md  MCP_SERVER_ARCHITECTURE.md  QUICKREF.md  QUICK_START.md  README.md  REPO_SELF_SUFFICIENCY.md  SLACK_LINEAR_INTEGRATION.md  SLASH_COMMANDS.md  TEST_COMMANDS.md  commitlint.config.js  config.toml  custom_workflows.py  demo_full_implementation.py  encrypt_token.py  github_backup_token.enc  github_backup_token.gpg  github_backup_token.gpg.asc  install.js  kimi_full_client.py  mcp_config.example.json  mcp_config.json  mcp_status_report.json  mcp_test_report.json  mcp_test_suite.py  mcp_workflow_automation.py  package.json  pyproject.toml  setup_context7.py  test_browser_servers.py  test_mcp_live.py  test_mcp_servers.py  (+2 more)
.github/workflows/: auto-tag.yml  ci.yml  nightly.yml  release.yml
.kimi/skills/: SKILL_GENERATION_REPORT.md
.kimi/skills/kimi-thermodynamic/: SKILL.md
.kimi/skills/mcp-server-config/: SKILL.md
.kimi/skills/python-async-mcp/: SKILL.md
.kimi/skills/yolo-mode/: SKILL.md  yolo.json  yolo_state.py
coggraph_mcp_server/: README.md  requirements.txt  setup.py
coggraph_mcp_server/coggraph/: __init__.py  client.py  graph.py  reasoning.py  server.py
coggraph_mcp_server/examples/: adr_workflow.py
conductor_mcp_server/: MANIFEST.in  README.md  conductor-command.js  pyproject.toml
conductor_mcp_server/conductor/: __init__.py  __main__.py  client.py  executor.py  planner.py  server.py  synthesizer.py
docs/: ARCHITECTURE.md
kimi-commands/: ask  check  do  get
kimi_mcp_client/: README.md  __init__.py  cli.py  client.py  config.py  main.py  requirements.txt  runtime_api.py  setup.py  task_manager.py  workflows.py
kimi_mcp_client/core/: engine.py  turn_loop.py
kimi_mcp_client/kimi_mcp_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
kimi_mcp_client/lsp/: client.py
kimi_mcp_client/servers/: __init__.py  base.py  brave.py  chrome.py  context7.py  firecrawl.py  github.py  linear.py  perplexity.py  playwright.py
kimi_mcp_client/skills/: loader.py
kimi_mcp_client/tools/: file.py  rlm.py  shell.py  tasks.py
kimi_mcp_client/tui/: ui.py
kimi_thermo/: __init__.py  complete_cli.py  dynamic_complete.py  main.py  thermo_executor.py  tools_complete.py
lib/: registry.js  utils.js
tests/: test_engine.py
