[project]
name = "kimi-cli-tools"
version = "1.0.0"
description = "Kimi Full Client — All 15 tools, async fiber execution, multi-turn, vision, streaming"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
toml = ["tomli>=2.0;python_version<'3.11'"]
thermo = ["openai>=1.0", "httpx>=0.25"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[project.scripts]
kimi = "kimi_mcp_client.main:main"
kimi-mcp = "kimi_mcp_client.main:main"
kimi-audit = "kimi_thermo.complete_cli:_cli_entry"
