[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conductor-mcp-server"
version = "1.0.0"
description = "Intent-Aware Orchestration MCP Server - Automatic tool selection and workflow orchestration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Kimi CLI Tools"}
]
keywords = ["mcp", "orchestration", "tools", "ai", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "networkx>=3.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
conductor-mcp = "conductor.server:main"

[project.urls]
Homepage = "https://github.com/Nietzsche-Ubermensch/kimi-cli-tools"
Repository = "https://github.com/Nietzsche-Ubermensch/kimi-cli-tools"

[tool.hatch.build.targets.wheel]
packages = ["conductor"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
